samples/_failures_safe/1761543636_fa29ee_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_c1bade65.c: In function ‘main’:
./samples/SAFE/__tmp_c1bade65.c:173:9: error: expected expression at end of input
  173 |         if (scanf("%d %d %d", &from, &to, &weight) !=
      |         ^~
./samples/SAFE/__tmp_c1bade65.c:173:9: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_c1bade65.c:173:9: error: expected declaration or statement at end of input
